src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AIT_Lead_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used as a Place holder for Lead ID of Siebel</description>
        <externalId>true</externalId>
        <label>AIT Lead ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>This field identifies the Account Type of the Lead</description>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Classified Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>This field is look up to account to determine the leads created for the account</description>
        <inlineHelpText>Associates the lead to an account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>This field identifies the Annual Revenue generated from the Lead</description>
        <label>Annual Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>$1 - $1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1M - $5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5M - $10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10M - $25M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25M - $50M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50M - $100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100M - $250M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250M - $500M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500M - $1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1B - $2.5B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2.5B - $5B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5B - $10B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10B+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Description__c</fullName>
        <description>This field describes the scope of the Opportunity</description>
        <label>Application Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>This field indicates the picklist values available for Application</description>
        <label>Application</label>
        <picklist>
            <controllingField>Vertical_Segment__c</controllingField>
            <picklistValues>
                <fullName>Access Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset and Facility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management Tracking &amp; Movement (owned by the company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking and Intelligence: Devices and Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking and Intelligence: Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking and Intelligence: Patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking and Intelligence: Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggage Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Bank Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast Milk Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Scanning &amp; Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Services Case Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Enforcement and Inspections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect Teacher and  Campus Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couponing Loyalty and Membership Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Docking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dietary and Allergens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Store Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document and Records Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Citation, Incidents Reports and Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interoperability with Public Safety and Municipalities</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_Date__c</fullName>
        <label>Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assign_to_Partner_in__c</fullName>
        <description>This Field is created to identify the Legacy System when the lead is assigned to a Partner</description>
        <inlineHelpText>Select to assign a lead to a partner. For EMEA select Siebel for AIT only lead, or select MSI SFDC for EVM and joint EVM/AIT leads. For NA/LATAM select R11i for AIT only lead, or select MSI SFDC for EVM and joint EVM/AIT leads. For APAC select Z SFDC only</inlineHelpText>
        <label>Assign to Partner in</label>
        <picklist>
            <picklistValues>
                <fullName>MSI SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R11i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z SFDC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <description>This field indicates the Budget Status of the Lead</description>
        <label>Budget Status</label>
        <picklist>
            <picklistValues>
                <fullName>Amount Allocated and Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Not Yet Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Get Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Approved, Not Allocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Value__c</fullName>
        <description>This field indicates the Budget Value</description>
        <label>Budget Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used for deleting the time-based WF entities</description>
        <label>Cancel Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chat_Launch_URL__c</fullName>
        <description>This field shows the Chat Launch URL</description>
        <label>Chat Launch URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Size_Normalized__c</fullName>
        <description>This field have the values for Company&apos;s Size.</description>
        <label>Company Size (Normalized)</label>
        <picklist>
            <picklistValues>
                <fullName>1 – 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 -100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 – 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501 – 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001 – 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001 – 9999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compensation_Manager__c</fullName>
        <description>This field is used to populate Compensation Manager&apos;s name of the Lead Owner</description>
        <formula>Owner:User.Manager1__r.FirstName &amp; &apos; &apos; &amp; Owner:User.Manager1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compensation Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>This field shows the Competitors of the Lead</description>
        <inlineHelpText>Shows competitors also bidding in the deal</inlineHelpText>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avery Dennison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviat Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beifeng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGRAVIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluebird Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLUEPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CellNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceragon Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIPHERLAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleartone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognitive Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datacard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datalogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datamax-Oneil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datasouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DragonWave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dymo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>This field is used to identify Contact Status of Lead</description>
        <inlineHelpText>Shows whether the contact is associated to the company.</inlineHelpText>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conviction_Level_With_OS_Direction__c</fullName>
        <label>Conviction Level With OS Direction</label>
        <picklist>
            <controllingField>Preferred_Handheld_Operating_System__c</controllingField>
            <picklistValues>
                <fullName>0-49%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Reseller__c</fullName>
        <description>This field shows the Current Reseller in the Lead</description>
        <inlineHelpText>Shows the current reseller the lead works with.  (New = New to Zebra.  Unknown = Has reseller but does not recall name.  None = does not have a reseller.</inlineHelpText>
        <label>Current Reseller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: used internally</description>
        <label>Cloud MDM Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <description>company&apos;s legal form</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: synchronize Lead data with Bean</description>
        <inlineHelpText>Cloud MDM: synchronize Lead data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_Classifications__c</fullName>
        <label>Demo Classifications</label>
        <picklist>
            <picklistValues>
                <fullName>Data Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deduplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrichment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Demo ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <description>Demo Edition only</description>
        <inlineHelpText>Demo Edition only</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Timeframe__c</fullName>
        <description>This field is used to show the Decision Making Timeframe</description>
        <label>Decision Making Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Within 1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused/Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <description>This is Custom Field to identify if the User has Opted out for recieving Calls
Relabeled as per the discussion with Sushanth</description>
        <label>Call Opt Out</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <description>This is Custom Field to identify if the User has Opted out for recieving Mails
-- Relabeled as per discussion with Sushanth</description>
        <label>Mail Opt Out</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EVM_Lead_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used as a Place holder for Lead ID of MSI SFDC which got pushed from Zebra in MSI that are Partner Assigned</description>
        <externalId>true</externalId>
        <label>EVM Lead ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Eloqua_ID__c</fullName>
        <description>This is for the lead Id flowing from Eloqua.</description>
        <label>Eloqua ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score__c</fullName>
        <label>Eloqua Lead Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <description>This is Custom Field to identify if the User has Opted out for Email</description>
        <inlineHelpText>Shows whether contact has provided permission to market to them via email.  Use the links in Custom Links section below to opt a contact in or out.</inlineHelpText>
        <label>Email Opt Out</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label># Employees</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 - 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001 - 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001 - 9999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <description>This field shows the avaiable &apos;Enquiry Type&apos; for Lead to select</description>
        <inlineHelpText>Shows type of inquiry.</inlineHelpText>
        <label>Enquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Information Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entry_URL__c</fullName>
        <description>This field identifies Entry URL</description>
        <label>Entry URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <description>This date field indicates the Estimated Close Date for the Lead</description>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Lead_Value__c</fullName>
        <label>Estimated Lead Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handheld_Component_For_Opportunity__c</fullName>
        <label>Is Handheld Component For Opportunity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hibernate_date_review__c</fullName>
        <description>This field is mandatory when the stage is Hibernate.
User can set this upto 90 days in Advance
--Change the label from &quot;Hibernate Date Review&quot; to &quot;Lead Review Date&quot;</description>
        <inlineHelpText>Required when lead is accepted or Sales Qualified Status.  Date can only be set to 30 days in advance.  Once date is met an email reminder will be sent requesting an update on the lead status.  If no change to lead status reset the lead review date.</inlineHelpText>
        <label>Lead Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hour_Lead_Created__c</fullName>
        <formula>IF( DATEVALUE(CreatedDate) = TODAY(), ROUND(MOD((NOW() - CreatedDate)*24,24),0), 
IF(DATEVALUE(CreatedDate) &lt; TODAY(),(TODAY() - DATEVALUE(CreatedDate))*24,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour - Lead Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_Partner_Account__c</fullName>
        <description>This field is created to display the Account ID of the Partner Company Name</description>
        <formula>IF( ISPICKVAL( Assign_to_Partner_in__c, &apos;MSI SFDC&apos;),  Partner_Company_Name__r.EVM_Account_ID__c, 
         IF(ISPICKVAL( Assign_to_Partner_in__c, &apos;R11i&apos;), Partner_Company_Name__r.AccountNumber,
              IF (ISPICKVAL( Assign_to_Partner_in__c, &apos;Siebel&apos;), Partner_Company_Name__r.AccountNumber,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration Partner Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Partner_Contact__c</fullName>
        <description>This field is created to display the Contact ID of the Partner Contact  Name</description>
        <formula>IF( ISPICKVAL( Assign_to_Partner_in__c, &apos;MSI SFDC&apos;),   Partner_Contact_Name__r.EVM_Contact_ID__c, 
IF(ISPICKVAL( Assign_to_Partner_in__c, &apos;R11i&apos;),  Partner_Contact_Name__r.AIT_Contact_ID__c, 
IF (ISPICKVAL( Assign_to_Partner_in__c, &apos;Siebel&apos;), Partner_Contact_Name__r.AIT_Contact_ID__c,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration Partner Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Auto_MAL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a Eloqua field</description>
        <label>Is Auto MAL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deal_Reg_or_SGL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field for Eloqua to check whether its from Deal Reg or SGL</description>
        <label>Is Deal Reg or SGL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Eloqua_Re_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to execute a trigger when Eloqua re-opens a lead to delete a number of fields.</description>
        <label>Is Eloqua Re-Open?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Re_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Utility field used by Eloqua to process a lead that has been re-opened from a closed/rejected status.</description>
        <label>Is Re-Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SGL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to detemine whether the Lead is Sales Generated Lead or not.</description>
        <label>Is SGL</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>